Revert "conflicts resolved"
This reverts commit fc6ae65cdad5caba34b17e141346ca57724e386d, reversing
changes made to ed8657a6046d1bb306467b10bfca22874bfb6002.
